--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td>Magazine</td>
             <td>Stock</td>
             <td>Muzzle</td>
-            <td>Muzzle_option</td>
+            <td>Muzzle option</td>
             <td>Flashlight</td>
             <td>Sight</td>
             <td>Laser sight</td>
