--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
         <h3><center>MGSV weapons table</center></h3>
       </div>
     </div>
-    <h4>Contents</h4>
-    <ul>
-      <li><a href='#notes'>Notes</a></li>
-      <li><a href='#t3'>All parts</a></li>
-      <li><a href='#t2'>Open slots</a></li>
-      <li><a href='#t1'>Default gun parts</a></li>
-    </ul>
 
-    <div class='row'>
+    <div class='row' style='max-width: 75em'>
+      <div class="large-12 columns">
+        <h4>Contents</h4>
+
+        <ul>
+          <li><a href='#notes'>Notes</a></li>
+          <li><a href='#t3'>All parts</a></li>
+          <li><a href='#t2'>Open slots</a></li>
+          <li><a href='#t1'>Default gun parts</a></li>
+        </ul>
+      </div>
+    </div>
+
+
+    <div class='row' style='max-width: 75em'>
       <div class="large-12 columns">
       Notes here
       </div>
     </div>
-    
+
     <div class="row">
       <div class="large-12 columns">
         <table id='t3'>
