--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class='row' style='max-width: 75em'>
+    <div class='row' style='max-width: 100em'>
       <div class="large-12 columns">
         <h4>Contents</h4>
 
@@ -30,9 +30,14 @@
     </div>
 
 
-    <div class='row' style='max-width: 75em'>
+    <div class='row' style='max-width: 100em'>
       <div class="large-12 columns">
-      Notes here
+       These tables contain vital information about MGSV guns. Please read README for basic info here - <a href="https://github.com/unknown321/mgsmonsterguns">https://github.com/unknown321/mgsmonsterguns</a>. Most of info was ripped from <span class="label">\master\0\00\Assets\tpp\level_asset\weapon\ParameterTables\parts\EquipParameters.lua</span> and <span class="label">\master\0\00\Assets\tpp\motherbase\script\WeaponPartsCombinationSettings.lua</span> using <a href='https://www.dropbox.com/s/0rtpumx2mxsjaby/MGSV_QAR_Tool.rar?dl=0'>MGSV QAR Tool v1.3 by Sergeanur</a>, <a href='https://github.com/Atvaark/FoxEngine.TranslationTool'>FoxEngine.TranslationTool</a> and some Python magic.
+
+       All parts table is sorted by part type and used when you need it.
+       Open slots table is sorted by type (frame->barrel) and amount of slots (from less to more). You should use it when you need to find a frame with many slots for example.
+       Default gun parts table has all parts for every single default gun. Not sure when you'll need to use this, nonetheless it is here.
+       All data is parsed from json files from <a href="https://github.com/unknown321/mgsmonsterguns/tree/gh-pages/js">/js/</a> directory.
       </div>
     </div>
 
