--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
        Default gun parts table has all parts for every single default gun. Not sure when you'll need to use this, nonetheless it is here.
        <br>
        All data is parsed from json files from <a href="https://github.com/unknown321/mgsmonsterguns/tree/gh-pages/js">/js/</a> directory.
+       <br>
+       <br>
+       <h4>How to identify your gun (using SERVAL grade 7 as example)</h4>
+       <ul>
+         <li>Open the game, find your gun in customization window, select it</li>
+         <li>Find corresponding barrel in tables below (look for SERVAL HP-BARREL) - <span class="secondary label">TppEquip.BA_60416</span></li>
+         <li>Open <span class="secondary label">EquipParameters.lua</span> (for closed slots) / <span class="secondary label">WeaponPartsCombinationSettings.lua</span> (open slots)</li>
+         <li>Ctrl+F - <span class="secondary label">TppEquip.BA_60416</span> </li>
+         <li>You did it. Same procedure can beis applied to gun frames.</li>
+       </ul>
       </div>
     </div>
 
