--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <li>Open <span class="secondary label">EquipParameters.lua</span> (for closed slots) / <span class="secondary label">WeaponPartsCombinationSettings.lua</span> (open slots)</li>
          <li>Ctrl+F - <span class="secondary label">TppEquip.BA_60416</span> </li>
          <li>You did it. Same procedure can beis applied to gun frames.</li>
-         <li><img src='img/serval.png' width=50%></li>
+         <li><img src='img/serval.png' width="30%"></li>
        </ul>
       </div>
     </div>
