--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
        </ul>
       </div>
     </div>
+    
+    <div class='row' id='also'>
+      <div class='large-12 columns'>
+        <h4>See also</h4>
+        	<p><a href="https://github.com/unknown321/mgsvdump">https://github.com/unknown321/mgsvdump</a></p>
+    		<p><a href="https://github.com/unknown321/mgsmwaifus">https://github.com/unknown321/mgsmwaifus</a></p>
+       </div>
+    </div>
 
 
     <div class="row">
